--- a/OfflineMapArcgis/AppShell.xaml
+++ b/OfflineMapArcgis/AppShell.xaml
@@ -4,12 +4,15 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:OfflineMapArcgis"
-    Shell.FlyoutBehavior="Disabled"
+    xmlns:views="clr-namespace:OfflineMapArcgis.Views"
+    Shell.FlyoutBehavior="Flyout"
     Title="OfflineMapArcgis">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+    <FlyoutItem Title="Home" Route="MainPage">
+        <ShellContent ContentTemplate="{DataTemplate local:MainPage}" />
+    </FlyoutItem>
+    
+    <FlyoutItem Title="New Page" Route="NewPage">
+        <ShellContent ContentTemplate="{DataTemplate views:NewPage}" />
+    </FlyoutItem>
 </Shell>
